# rust-protobuf

protobuf/: Cargo.toml
protobuf-codegen-pure-test/: Cargo.toml
protobuf-test/: Cargo.toml
protobuf-test-common/: Cargo.toml
protobuf/src/: core.rs
