[package]

name = "protobuf"
version = "2.8.0"
authors = ["Nick Cameron <nrc@ncameron.org>", "Stepan Koltsov <stepan.koltsov@gmail.com>"]
license = "MIT"
homepage = "https://github.com/nrc/rust-protobuf/"
repository = "https://github.com/nrc/rust-protobuf/"
documentation = "https://github.com/nrc/rust-protobuf/blob/master/README.md"
description = """
Rust implementation of Google protocol buffers

A minor fork of https://github.com/stepancheg/rust-protobuf/
"""

[lib]
doctest = false
bench = false

[features]
with-bytes = ["bytes"]
with-serde = ["serde", "serde_derive"]

[dependencies]
bytes = { version = "0.5", optional = true }
serde        = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
heck = "0.3"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
